--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,119 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  /* font-family: "Rubik", sans-serif; */
+  font-family: 'Titillium Web', sans-serif;
+  /* font-family: 'Noto Serif', serif; */
+  /* font-family: var(--kanit); */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#main_div {
+  margin-top: 14px;
+  width: 78%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* ############################################################################### */
+/* Navbar List design  */
+
+#nav_bar {
+  background-color: #f2f2f2;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+#nav_bar::before {
+  content: " ";
+  /* background-color: black; */
+  background-color: #f2f2f2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  /* opacity: 0.6; */
+}
+
+#nav_ul {
+  margin-top: 12px;
+  margin-left: auto;
+}
+
+#nav_bar ul li a {
+  color: black;
+  display: block;
+  padding: 11px 17px;
+  text-decoration: none;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 1.22rem;
+}
+
+#nav_bar ul li a:hover {
+  color: #00b0fb;
+}
+
+#navbarSupportedContent{
+  flex: none;
+}
+#logo_heading{
+  cursor: pointer;
+}
+
+  /* ############################################################################### */
+/* Hero section design  */
+
+#hero_section {
+  background-color: #f2f2f2;
+  /* background-color:  #00b0fb; */
+}
+
+.hero_container {
+  width: 78%;
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+  /* grid-template-columns: 3fr 4fr; */
+  align-items: center;
+  margin: auto;
+  /* margin-left: 17.5rem; */
+}
+
+.hero_container h1 {
+  font-size: 58px;
+  font-weight: bold;
+}
+
+.home_left {
+  padding: 9rem 1rem;
+  /* padding-right: 5rem; */
+  padding-top: 0%;
+  padding-right: 3rem;
+}
+
+#p_margin {
+  margin-top: 1.24rem;
+  /* margin-right: 18px; */
+}
+
+#home_img {
+  width: 100%;
+  /* height: 100%;
+  margin-right: -6em; */
+  clip-path: circle(50% at 62% 50%);
+  clip-path: circle(54% at 62% 30%);
+}
+
+#btn_signup {
+  background-color: #00b0fb;
+  border-color: #00b0fb;
   color: white;
+  font-size: larger;
+  padding: 0.7rem 2rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#btn_signup:hover {
+  color: #00b0fb;
+  background-color: #fff;
 }
