--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,6 @@
   /* grid-template-columns: 3fr 4fr; */
   align-items: center;
   margin: auto;
-  /* margin-left: 17.5rem; */
 }
 
 .hero_container h1 {
@@ -91,20 +90,16 @@
 
 .home_left {
   padding: 9rem 1rem;
-  /* padding-right: 5rem; */
   padding-top: 0%;
   padding-right: 3rem;
 }
 
 #p_margin {
   margin-top: 1.24rem;
-  /* margin-right: 18px; */
 }
 
 #home_img {
   width: 100%;
-  /* height: 100%;
-  margin-right: -6em; */
   clip-path: circle(50% at 62% 50%);
   clip-path: circle(54% at 62% 30%);
 }
@@ -135,16 +130,9 @@
   padding-top: 4%;
 }
 
-/* #skills_section {
-  padding: 0% 6%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
-
-
 #skills_section .icons img{
   height: 160px;
+  /* width: 13rem; */
   padding: 3% 5%;
   margin: 2% 1%;
 }
